# CoPawClaw

./: .env.example  .gitignore  COPAW_SKILLS_PLATFORM_SPEC.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: main.py  socket_handler.py
api/routes/: schedules.py  sensing.py  skills.py
copaw_config/: config.json
copaw_config/providers/: fallback.json
enterprise_skills_lib/: config.py  constants.py  copaw_provider.py  skill_envelope.py
enterprise_skills_lib/llm/: client.py  output_sanitizer.py
enterprise_skills_lib/llm/output_schemas/: base.py  competitive.py  executive.py  patents.py  regulations.py  sensing.py  talent.py
enterprise_skills_lib/llm/prompts/: competitive_prompts.py  patent_prompts.py  (+4 more)
enterprise_skills_lib/sensing/: cache.py  classify.py  collaboration.py  comparison.py  config.py  dedup.py  deep_dive.py  email_digest.py  ingest.py  movement.py  org_context.py  pipeline.py  report_generator.py  scheduler.py  signal_score.py  timeline.py  verifier.py
scripts/: patch_copaw_skills.py  patch_copaw_timeout.py  setup_copaw.bat  setup_copaw.sh
skills/competitive_intel/: SKILL.md
skills/email_digest/: SKILL.md
skills/executive_brief/: SKILL.md
skills/patent_monitor/: SKILL.md
skills/pptx_gen/: SKILL.md
skills/regulation_tracker/: SKILL.md
skills/talent_radar/: SKILL.md
skills/tech_sensing/: SKILL.md
tests/: conftest.py
tests/integration/: test_ingest.py
tests/unit/: test_collaboration.py  test_comparison.py  test_config.py  test_dedup.py  test_output_sanitizer.py  test_schemas.py  test_signal_score.py
(+26 files in other folders)
